<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="visctorsaico.tecsup.tecsupmusic.MainListmusicActivity">

    <RelativeLayout
        android:id="@+id/portada"
        android:layout_width="match_parent"
        android:background="@color/fondoportadalistmusic"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_mainlist_portada"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_greenday_album"
            android:layout_alignParentEnd="true" />
        <LinearLayout
            android:layout_marginTop="@dimen/dm_mainlist_margintop_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_mainlist_marginleft_albums"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/bgsongs_mainlist_layoutw"
                    android:layout_height="@dimen/bg_songs_mainlist_layoutw"
                    android:scaleType="centerCrop"
                    android:layout_marginRight="@dimen/bgsongs_mainlist_marginrigth"
                    android:src="@drawable/bg_song1"/>
                <ImageView
                    android:layout_width="@dimen/bg_songs_mainlist_layoutw"
                    android:layout_height="@dimen/bg_songs_mainlist_layoutw"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_song2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/bg_songs_mainlist_layoutw"
                    android:layout_height="@dimen/bg_songs_mainlist_layoutw"
                    android:layout_marginRight="@dimen/bgsongs_mainlist_marginrigth"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_song3" />

                <ImageView
                    android:layout_width="@dimen/bg_songs_mainlist_layoutw"
                    android:layout_height="@dimen/bg_songs_mainlist_layoutw"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_song4"/>
            </LinearLayout>
        </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dm_mainlist_marginw_tituloplaylist"
    android:layout_marginTop="@dimen/dm_mainlist_marginlef_tituloplaylist"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_mainlist_nombrealbum"
        android:textColor="@color/primary_text"
        android:text="@string/txt_mainlist_rock"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/txt_mainlist_nombreplaylist"
        android:text="@string/txt_mainlist_my_playlist"/>
    <TextView
        android:textSize="@dimen/txt_mainlist_numsongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mainlist_21_songs"/>
</LinearLayout>
    </RelativeLayout>
    <!--Lista de las musicas del album seleccionado-->
        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/scrolllist"
            android:layout_height="@dimen/dm_mainlist_layoutheight_scrollview"
            android:layout_below="@id/portada"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fondoscrollview"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorsong"
                    android:layout_marginBottom="@dimen/dm_mainlistmusic_linerlayout"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwi_album"
                        android:layout_height="@dimen/dm_mainlist_layouthe_album"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_song1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dm_mainlist_padd_canciones"
                        android:orientation="vertical"
                        android:layout_weight="7.79">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_21_guns"
                            android:textSize="@dimen/dm_mainlist_namesong"
                            android:textColor="@color/primary_text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_3_02"
                            android:textSize="@dimen/dm_mainlist_minutesong"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_height="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_weight="0.39"
                        android:src="@mipmap/ic_play"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorsong"
                    android:layout_marginBottom="@dimen/dm_mainlistmusic_linerlayout"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwi_album"
                        android:layout_height="@dimen/dm_mainlist_layouthe_album"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_song2"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dm_mainlist_padd_canciones"
                        android:orientation="vertical"
                        android:layout_weight="7.79">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_boulevard_of_broken"
                            android:textSize="@dimen/dm_mainlist_namesong"
                            android:textColor="@color/primary_text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_4_22"
                            android:textSize="@dimen/dm_mainlist_minutesong"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_height="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_weight="0.39"
                        android:src="@mipmap/ic_play"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorsong"
                    android:layout_marginBottom="@dimen/dm_mainlistmusic_linerlayout"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwi_album"
                        android:layout_height="@dimen/dm_mainlist_layouthe_album"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_song3"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dm_mainlist_padd_canciones"
                        android:orientation="vertical"
                        android:layout_weight="7.79">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_love"
                            android:textSize="@dimen/dm_mainlist_namesong"
                            android:textColor="@color/primary_text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_5_23"
                            android:textSize="@dimen/dm_mainlist_minutesong"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_height="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_weight="0.39"
                        android:src="@mipmap/ic_play"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorsong"
                    android:layout_marginBottom="@dimen/dm_mainlistmusic_linerlayout"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwi_album"
                        android:layout_height="@dimen/dm_mainlist_layouthe_album"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_song4"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dm_mainlist_padd_canciones"
                        android:orientation="vertical"
                        android:layout_weight="7.79">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_bullet"
                            android:textSize="@dimen/dm_mainlist_namesong"
                            android:textColor="@color/primary_text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_2_22"
                            android:textSize="@dimen/dm_mainlist_minutesong"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_height="@dimen/dm_mainlist_layoutwidth_botonplay"
                        android:layout_weight="0.39"
                        android:src="@mipmap/ic_play"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <!--Menu inferior para la musica-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dm_mainlist_padd_menucontrol"
            android:weightSum="1">
            <ImageView
                android:layout_width="@dimen/dm_mainlist_layoutw_imgplay"
                android:layout_height="@dimen/dm_mainlist_layouth_imgplay"
                android:src="@drawable/bg_song3"/>
            <LinearLayout
                android:layout_width="@dimen/dm_mainlist_layoutw_txtcontrol"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.73">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_love"
                    android:textSize="@dimen/dm_mainlist_namesong"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_3_02"
                    android:textSize="@dimen/dm_mainlist_minutesong"/>
            </LinearLayout>
            <ImageView
                android:layout_width="@dimen/dm_mainlist_layoutwidth_botonplay"
                android:layout_height="@dimen/dm_mainlist_layoutwidth_botonplay"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
</LinearLayout>
